[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/DeviceCodeLogin.gd" id="1_script"]

[node name="DeviceCodePopup" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -200.0
offset_right = 220.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 25

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Sign In"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "On your phone, go to:"
horizontal_alignment = 1

[node name="URLLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "cheddaboards.com/link"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Panel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="EnterCodeLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Enter code:"
horizontal_alignment = 1

[node name="CodeLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 36
text = "CHEDDA-XXXX"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="Panel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Waiting for you to sign in..."
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "Expires in 5:00"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="Panel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "Cancel"
